Cleanup of code
Added pass or fail colours for quiz results. Edited other code

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,20 @@
 Jake
 ---------------------
-store the results from the quiz in the database
-find a way to calculate the total score with the individual quizes
-have database be accessable to the graph jordan makes
+store the results from the quiz in the database X
+find a way to calculate the total score with the individual quizes ?
 ---------------------
 
 Jordan
 ---------------------
-fix ur shit lol
+
 ---------------------
 
 Kane
 ---------------------
-fix ur shit lol
+
+---------------------
+
+All
+---------------------
+have database be accessable to the graph jordan makes ?
 ---------------------
