--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,11 @@ Make Login and Register pages prettier
 Make top of User/Profile page prettier
 fix the login.css containers, make into one (back end boy requires a front end chad to help)
 Comment all of the code
-perform selenium tests (Lecture 12)
+create unittests
+perform selenium tests (Lecture 12) - IN PROGRESS
+error logging - DONE
+make drop down menu work when window is very thin, same with the cards
+fix all remaining TODOs
 
 Edit the readme to abide by this:
     In addition to the web application, you should create a private GitHub project that includes a readme describing:
@@ -26,3 +30,12 @@ Prepare a zip folder including all these:
 
 could probably add even more users and quiz results for those users for the stats page
 ------------------------------------------------------------------------------------------------------------------------------
+
+additional extras (if there's time):
+
+add score of previous tests on the card of the lessons page
+
+
+Testing stuff
+
+python -m unittest -v unittester.py
