changed sign in and register page

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,10 +4,10 @@
 ADD LOG FILE.
 
 
-Add more questions to lesson 2 and lesson 3, very easy, just add to the questions arrays in quiz.js
+Add more questions to lesson 2 and lesson 3, very easy, just add to the questions arrays in quiz.js 
 Make Login and Register pages prettier
 Make top of User/Profile page prettier
-fix the login.css containers, make into one (back end boy requires a front end chad to help)
+fix the login.css containers, make into one (back end boy requires a front end chad to help) - done
 Comment all of the code
 create unittests
 perform selenium tests (Lecture 12) - IN PROGRESS
