--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@ Make Login and Register pages prettier
 Make top of User/Profile page prettier
 fix the login.css containers, make into one (back end boy requires a front end chad to help)
 Comment all of the code
-create unittests
+create unittests - DONE
 perform selenium tests (Lecture 12) - IN PROGRESS
 error logging - DONE
 make drop down menu work when window is very thin, same with the cards
