--- a/TODO.txt
+++ b/TODO.txt
@@ -2,14 +2,15 @@
 --TODO list!--
 ------------------------------------------------------------------------------------------------------------------------------
 ADD LOG FILE.
-
+quiz fonts and sizes
+fix footer links
 
 Add more questions to lesson 2 and lesson 3, very easy, just add to the questions arrays in quiz.js 
-Make Login and Register pages prettier
+Make Login and Register pages prettier -DONE
 Make top of User/Profile page prettier
 fix the login.css containers, make into one (back end boy requires a front end chad to help) - done
 Comment all of the code
-create unittests
+create unittests -DONE
 perform selenium tests (Lecture 12) - IN PROGRESS
 error logging - DONE
 make drop down menu work when window is very thin, same with the cards
